# pipewire-debian

./: .editorconfig  .gitignore  InRelease  LICENSE  Packages  README.md  Release  Release.gpg  blueman-git_2.1.4-git-dbfad0a-1_amd64.buildinfo  blueman-git_2.1.4-git-dbfad0a-1_amd64.deb  dowload_PW.sh  gstreamer1.0-pipewire-dbgsym_0.3.26-1_amd64.ddeb  gstreamer1.0-pipewire_0.3.26-1_amd64.deb  libldacbt-enc2_2.0.2.3+git20200429+ed310a0-4_amd64.deb  libpipewire-0.3-0-dbgsym_0.3.26-1_amd64.ddeb  libpipewire-0.3-modules_0.3.26-1_amd64.deb  libspa-0.2-jack-dbgsym_0.3.26-1_amd64.ddeb  libspa-0.2-jack_0.3.26-1_amd64.deb  libspa-0.2-modules-dbgsym_0.3.26-1_amd64.ddeb  libspa-0.2-modules_0.3.26-1_amd64.deb  pipewire-audio-client-libraries_0.3.26-1_amd64.deb  pipewire-bin-dbgsym_0.3.26-1_amd64.ddeb  pipewire-locales_0.3.26-1_all.deb  pipewire-tests_0.3.26-1_amd64.deb  pipewire.list  pipewire_0.3.26-1_amd64.buildinfo  pipewire_0.3.26-1_amd64.changes  pipewire_0.3.26-1_amd64.deb  updatePPA
.github/: FUNDING.yml
blueman-git/: README.md
debian/: changelog  control  gstreamer1.0-pipewire.install  libpipewire-0.3-0.symbols  libspa-0.2-modules.install  not-installed  pipewire-audio-client-libraries.install  pipewire-audio-client-libraries.links  pipewire-audio-client-libraries.lintian-overrides  pipewire-audio-client-libraries.postrm  pipewire-audio-client-libraries.shlibs.local  pipewire-bin.install  pipewire-bin.links  pipewire-bin.maintscript  pipewire-locales.install  pipewire-tests.docs  pipewire-tests.install  pipewire.install  rules  watch
libcamera/: libcamera_0~git20200629+e7aa92a.orig.tar.xz
libldac/: libldac_2.0.2.3+git20200429+ed310a0.orig.tar.xz
mini/: mini-soong_0.20201028-1.tar.xz  mini-soong_0.20201028.orig.tar.xz
openfec/openfec-1.4.2.4/: ._LICENCE_CeCILL-C_V1-en.txt  CHANGELOG  CMakeLists.txt  Doxyfile  README
openfec/openfec-1.4.2.4/applis/eperftool/: CMakeLists.txt  blocking_struct.c  blocking_struct.h  callbacks.c  callbacks.h  codec_instance_mgmt.c  codec_instance_mgmt.h  command_line.c  defaults.h  eperftool.c  eperftool.h  globals.c  globals.h  receiver.c  sender.c  tx_simulator.c
openfec/openfec-1.4.2.4/applis/howto_examples/simple_client_server/: CMakeLists.txt  README.TXT  simple_client.c  simple_client_server.h  simple_server.c
openfec/openfec-1.4.2.4/debian/: changelog  rules
openfec/openfec-1.4.2.4/doc/doxygen/: Doxyfile
openfec/openfec-1.4.2.4/doc/howto_performance_evaluation/: IL_file_image-inverted.eps  IL_file_image.eps  Makefile  biblio.bib  failure_prob_wrt_loss_prob_k1000_r1.5.eps  failure_prob_wrt_nb_received.eps  howto_performance_evaluation.tex
openfec/openfec-1.4.2.4/doc/howto_use_openfec_lib/: Makefile  howto_use_openfec_lib.tex
openfec/openfec-1.4.2.4/perf_eval/: generate_curves.pl  params.txt  params_c1_or_c2.txt  params_c3_or_c4.txt  params_c6.txt  params_c7.txt  plot_graphs.sh  run_tests.pl
openfec/openfec-1.4.2.4/src/: CMakeLists.txt
openfec/openfec-1.4.2.4/src/lib_advanced/ldpc_from_file/: of_codec_profile.h  of_ldpc_ff.h  of_ldpc_ff_api.c  of_ldpc_ff_api.h  of_ldpc_ff_includes.h  of_ldpc_includes.h
openfec/openfec-1.4.2.4/src/lib_common/: of_cb.h  of_debug.h  of_mem.c  of_mem.h  of_openfec_api.c  of_openfec_api.h  of_openfec_profile.h  of_rand.c  of_rand.h  of_types.h
openfec/openfec-1.4.2.4/src/lib_common/linear_binary_codes_utils/: of_create_pchk.c  of_create_pchk.h  of_linear_binary_code.h  of_symbol.c  of_symbol.h
openfec/openfec-1.4.2.4/src/lib_common/linear_binary_codes_utils/binary_matrix/: of_hamming_weight.c  of_hamming_weight.h  of_matrix_convert.c  of_matrix_convert.h  of_matrix_dense.c  of_matrix_dense.h  of_matrix_sparse.c  of_matrix_sparse.h  of_tools.c  of_tools.h
openfec/openfec-1.4.2.4/src/lib_common/linear_binary_codes_utils/it_decoding/: of_it_decoding.c  of_it_decoding.h
openfec/openfec-1.4.2.4/src/lib_common/linear_binary_codes_utils/ml_decoding/: of_ml_decoding.c  of_ml_decoding.h  of_ml_tool.c  of_ml_tool.h
openfec/openfec-1.4.2.4/src/lib_common/statistics/: of_statistics.c  of_statistics.h
openfec/openfec-1.4.2.4/src/lib_stable/2d_parity_matrix/: of_2d_parity.h  of_2d_parity_api.c  of_2d_parity_api.h  of_2d_parity_includes.h  of_codec_profile.h
openfec/openfec-1.4.2.4/src/lib_stable/ldpc_staircase/: of_codec_profile.h  of_ldpc_includes.h  of_ldpc_staircase.h  of_ldpc_staircase_api.c  of_ldpc_staircase_api.h  of_ldpc_staircase_pchk.c
openfec/openfec-1.4.2.4/src/lib_stable/reed-solomon_gf_2_8/: of_codec_profile.h  of_reed-solomon_gf_2_8.c  of_reed-solomon_gf_2_8.h  of_reed-solomon_gf_2_8_api.c  of_reed-solomon_gf_2_8_api.h  of_reed-solomon_gf_2_8_includes.h
openfec/openfec-1.4.2.4/src/lib_stable/reed-solomon_gf_2_m/: of_codec_profile.h  of_reed-solomon_gf_2_m.h  of_reed-solomon_gf_2_m_api.c  of_reed-solomon_gf_2_m_api.h  of_reed-solomon_gf_2_m_includes.h
openfec/openfec-1.4.2.4/src/lib_stable/reed-solomon_gf_2_m/galois_field_codes_utils/: algebra_2_4.c  algebra_2_4.h  algebra_2_8.c  algebra_2_8.h  of_galois_field_code.c  of_galois_field_code.h
openfec/openfec-1.4.2.4/tests/: CMakeLists.txt  callback_test.c  code_params_test.c  create_instance_test.c  encoder_instance_test.c
openfec/openfec-1.4.2.4/tools/descr_stats_v1.2/: CMakeLists.txt  README  descr_stats.c  descr_stats_doc.html
pipewire/: README.md  meson_After_Config_Options.list  meson_PW_After_Config_Options.list  meson_PW_Default_Options.list  meson_auto_configure.sh  resolve_PW_Depends.sh  ubuntu_meson_PW_auto_config.sh
ubuntu/: InRelease  KEY.gpg  Packages  Release  Release.gpg  blueman-git-dbgsym_2.1.4-git-dbfad0a-1_amd64.ddeb  gstreamer1.0-pipewire-dbgsym_0.3.27-1_amd64.ddeb  gstreamer1.0-pipewire_0.3.27-1_amd64.deb  libfdk-aac2_2.0.1-1_amd64.deb  libldacbt-abr2_2.0.2.3+git20200429+ed310a0-4_amd64.deb  libopenaptx0_0.2.0-5_amd64.deb  libpipewire-0.3-0-dbgsym_0.3.27-1_amd64.ddeb  libpipewire-0.3-0_0.3.26-1_amd64.deb  libpipewire-0.3-0_0.3.27-1_amd64.deb  libpipewire-0.3-dev_0.3.26-1_amd64.deb  libpipewire-0.3-dev_0.3.27-1_amd64.deb  libpipewire-0.3-modules-dbgsym_0.3.26-1_amd64.ddeb  pipewire.list  (+27 more)
(+404 files in other folders)
